# cowin-alert

./: .env.example  .gitignore  .pre-commit-config.yaml  .prospector.yml  Makefile  README.md  dev-requirements.txt  dump.rdb  manage.py  pyproject.toml  requirements.txt
scripts/: db-backup.sh  db-restore.sh
sql/: create_database.sql  drop_database.sql
src/: asgi.py  celery_app.py  gunicorn.py  manage.py  settings.py  setup.py  urls.py  wsgi.py
src/core/: __init__.py  admin.py  apis.py  apps.py  email.py  managers.py  mixins.py  models.py  serializers.py  signals.py  tasks.py  urls.py  validators.py
src/core/migrations/: 0001_initial.py  0002_auto_20210502_0044.py  0003_alter_cowinsession_session_id.py  0004_remove_cowincenter_data.py  0005_alertrequest_notification_counter.py  0006_auto_20210502_1815.py  0007_auto_20210502_1837.py  0008_feedback.py  0009_auto_20210502_2130.py  0010_remove_alertrequest_age.py  0011_alter_cowinsession_available_capacity.py
src/core/services/: cowin.py  fetcher.py
src/templates/: unsubscribed.html
src/templates/email/: session_available_alert.html
