[tool.poetry]
name = "cowin-alert"
version = "0.1.0"
description = "Alerts for vaccine centres"
authors = ["Pixeldust Pvt. Ltd."]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
django-extensions = "^3.1.3"
django-autoslug = "^1.9.8"
django-debug-toolbar = "^3.2.1"
django-fsm = "^2.7.1"
django-filter = "^2.4.0"
django-log-request-id = "^1.6.0"
django-storages = "^1.11.1"
djangorestframework = "^3.12.4"
django-redis = "^4.12.1"
django-cors-headers = "^3.7.0"
django-celery-email = "^3.0.0"
django-celery-beat = "^2.2.0"
psycopg2-binary = "^2.8.6"
gunicorn = "^20.1.0"
celery = "^5.0.5"
requests = "^2.25.1"
redis = "^3.5.3"
python-decouple = "^3.4"
user-agents = "^2.2.0"
pandas = "^1.2.4"
colorlog = "^5.0.1"
glom = "^20.11.0"
ipython = "^7.23.0"
sentry-sdk = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^21.4b2"
prospector = "^1.3.1"
bandit = "^1.7.0"
pre-commit = "^2.12.1"
ipdb = "^0.13.7"
watchdog = "^2.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
